--- a/template/public/index.html
+++ b/template/public/index.html
@@ -24,9 +24,30 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
+    <title>React App</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     
-    <title>React App</title>
+    <!-- Local fallbacks per this stack overflow answer: https://stackoverflow.com/questions/26192897/should-i-use-bootstrap-from-cdn-or-make-a-copy-on-my-server -->
+    <!-- Bootstrap CSS local fallback -->
+    <script>
+      const test = document.createElement("div");
+      test.className = "hidden d-none";
+
+      document.head.appendChild(test);
+      const cssLoaded = window.getComputedStyle(test).display === "none";
+      document.head.removeChild(test);
+
+      if (!cssLoaded) {
+          const link = document.createElement("link");
+
+          link.type = "text/css";
+          link.rel = "stylesheet";
+          link.href = "lib/bootstrap.min.css";
+
+          document.head.appendChild(link);
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,8 +61,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- jQuery local fallback -->
+    <script>window.jQuery || document.write('<script src="lib/jquery.slim.min.js"><\/script>')</script>
+
+    <!-- Popper CDN -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    
+    <!-- Bootstrap Js CDN -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS local fallback -->
+    <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="lib/bootstrap.min.js"><\/script>')}</script>
+
   </body>
 </html>
